frontend/src/css/NavBar.css
.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #262626;
  padding: 0 3rem;
  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
  z-index: 1000;
}

@media (max-width: 768px) {
  .navbar {
    padding: 0 1.7rem;
  }
}

@media (max-width: 400px) {
  .navbar {
    background-color: #1e1e1e;
  }
}

.navbar-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.logo {
  color: white;
  font-size: 1.5rem;
  font-weight: bold;
}

/* Desktop Links */
.nav-links button {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  font-size: 1.1rem;
  padding: 1.2rem 1.5rem;
  text-decoration: none;
  transition: color 0.3s ease;
}

.nav-links>button.nav-button--active {
  color: #64ffcf;
  cursor: auto;
}

.nav-links button:hover:not(.nav-button--active) {
  transform: scale(1.05);
  transition: transform 100ms;
  transition-timing-function: ease-in;
}

/* Hamburger Menu for Mobile */
.hamburger {
  display: none;
  cursor: pointer;
  flex-direction: column;
  gap: 5px;
  padding: 1.2rem 0;
}

.hamburger .bar {
  width: 25px;
  height: 3px;
  background-color: white;
  border-radius: 3px;
}

/* Responsive Styles */
@media (max-width: 500px) {
  .nav-links {
    position: absolute;
    top: 52px;
    right: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;

    align-items: center;
    background-color: #0a1930;
    height: 95vh;
    transform: translateX(100%);
    width: 100%;
  }

  .nav-links button {
    font-size: 2rem;
    padding: 1.5rem 3rem;
    transition: color 0.3s ease;
  }

  .nav-links.open {
    transform: translateX(0);
    transition: transform 0.15s ease;
  }

  .hamburger {
    display: flex;
  }
}

